# bannerify

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: build.yml
src/: allocator.rs  banner.rs  block.rs  color.rs  geometry.rs  lab.rs  logger.rs  macros.rs  main.rs  math.rs  pattern.rs
src/banner/: mod.rs
src/cli/: color.rs  complexity.rs  config.rs  dimension.rs  mod.rs  resizing.rs
src/export/: html.rs  image.rs  mod.rs
src/image/: mod.rs  resize.rs  split.rs
src/logger/: mod.rs  profiler.rs
src/solver/: block.rs  build.rs  complexity.rs  distance.rs  fill.rs  mod.rs  next_layer.rs  pipeline.rs  refine.rs
src/solver/greedy/: complexity.rs  initial_fill.rs  mod.rs
src/solver/optimal/: complexity.rs  initial_fill.rs  mod.rs  optimal_color.rs
templates/: template.html
