[package]
name = "bannerify"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.6"
base64-simd = "0.8.0"
clap = { version = "4.6.0", features = ["derive", "wrap_help"] }
colored = "3.1.1"
fast_image_resize = { version = "6.0.0", features = ["image"] }
fastnbt = "2.6.1"
image = "0.25.10"
mimalloc = { version = "0.1.48", features = ["v3"] }
rand = "0.10.0"
rayon = "1.11.0"
rust-embed = { version = "8.11.0", features = ["include-exclude"] }
serde = "1.0.228"
toml = "1.0.7"
wide = "1.2.0"

[features]
# this will tell you long each process took, can be quite annoying
profiling = []

[profile.release]
opt-level = 3
# these options is so fucking slow, only enable if you want to push the limit
# codegen-units = 1
# lto = "fat"
# this is for flamegraph, disable unless you know what you are doing
# debug = true

[profile.dev]
opt-level = 0
